src/objects/Expense__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Withdrawal_Sum__c</fullName>
        <label>Cash Withdrawal Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Withdrawal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash Withdrawal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shopping</fullName>
                </value>
                <value>
                    <fullName>Groceries</fullName>
                </value>
                <value>
                    <fullName>Bills</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                    <label>Cash Payment</label>
                </value>
                <value>
                    <fullName>Credit Payment</fullName>
                </value>
                <value>
                    <fullName>Various</fullName>
                </value>
                <value>
                    <fullName>Cash Withdrawal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Every_Month__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked, this bill will be automatically created every month</description>
        <label>Every Month</label>
        <type>Checkbox</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Description__c</columns>
        <columns>Category__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>This_Month_Expenses_trebalo_bi_da_radi</fullName>
        <columns>Date__c</columns>
        <columns>Category__c</columns>
        <columns>Amount__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month Expenses</label>
    </listViews>
    <nameField>
        <displayFormat>EXP-{0000}</displayFormat>
        <label>Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <recordTypes>
        <fullName>Create_New_Record</fullName>
        <active>true</active>
        <label>Create New Record</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Amont_cant_be_empty_or_less_than_zero</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Amount__c) || Amount__c &lt; 0</errorConditionFormula>
        <errorMessage>Amount can&apos;t be empty or less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Category_Cant_Be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Category__c, &quot;&quot;)</errorConditionFormula>
        <errorMessage>Select Category!</errorMessage>
    </validationRules>
</CustomObject>